<resources>
    <string name="app_name">A.Calc</string>
    <string name="Backspace">BCK</string>
    <string name="LBracket">(</string>
    <string name="RBracket">)</string>
    <string name="Clear">C</string>
    <string name="percent">%</string>
    <string name="dot">.</string>
    <string name="_0">0</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="Hist">ИСТ</string>
    <string name="Divide">/</string>
    <string name="Multiply">*</string>
    <string name="Subtract">-</string>
    <string name="Add">+</string>
    <string name="Root">√</string>
    <string name="Pow">^</string>
    <string name="Pi">π</string>
    <string name="Result">=</string>
</resources>