<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableRow android:layout_weight="1">

        <Button
            android:id="@+id/btn7"
            style="@style/NumberButton"
            android:layout_weight="1"
            android:text="@string/_7" />

        <Button
            android:id="@+id/btn8"
            style="@style/NumberButton"
            android:layout_weight="1"
            android:text="@string/_8" />

        <Button
            android:id="@+id/btn9"
            style="@style/NumberButton"
            android:layout_weight="1"
            android:text="@string/_9" />

    </TableRow>

    <TableRow android:layout_weight="1">

        <Button
            android:id="@+id/btn4"
            style="@style/NumberButton"
            android:layout_weight="1"
            android:text="@string/_4" />

        <Button
            android:id="@+id/btn5"
            style="@style/NumberButton"
            android:layout_weight="1"
            android:text="@string/_5" />

        <Button
            android:id="@+id/btn6"
            style="@style/NumberButton"
            android:layout_weight="1"
            android:text="@string/_6" />

    </TableRow>

    <TableRow android:layout_weight="1">

        <Button
            android:id="@+id/btn1"
            style="@style/NumberButton"
            android:layout_weight="1"
            android:text="@string/_1" />

        <Button
            android:id="@+id/btn2"
            style="@style/NumberButton"
            android:layout_weight="1"
            android:text="@string/_2" />

        <Button
            android:id="@+id/btn3"
            style="@style/NumberButton"
            android:layout_weight="1"
            android:text="@string/_3" />

    </TableRow>

    <TableRow android:layout_weight="1">

        <Button
            android:id="@+id/btn0"
            style="@style/NumberButton"
            android:layout_weight="1"
            android:text="@string/_0" />

        <Button
            android:id="@+id/btnDot"
            style="@style/NumberButton"
            android:layout_weight="1"
            android:text="@string/_1" />

    </TableRow>
</TableLayout>