<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btnClear"
        style="@style/UpperButton"
        android:layout_weight="1"
        android:text="@string/Clear" />

    <Button
        android:id="@+id/btnLBracket"
        style="@style/UpperButton"
        android:layout_weight="1"
        android:text="@string/LBracket" />

    <Button
        android:id="@+id/btnRBracket"
        style="@style/UpperButton"
        android:layout_weight="1"
        android:text="@string/RBracket" />

    <Button
        android:id="@+id/btnHist"
        style="@style/UpperButton"
        android:layout_weight="1"
        android:text="@string/Hist" />

    <Button
        android:id="@+id/btnBackspace"
        style="@style/UpperButton"
        android:layout_weight="1"
        android:text="@string/Backspace" />

</LinearLayout>